<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="user" type="com.ai.shoukuan.bean.UserBean"/>
        <variable
            name="clk"
            type="com.ai.shoukuan.ui.register.RegisterActivity" />
    </data>

    <LinearLayout
        android:gravity="center"
        android:background="@color/white_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_username"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/user_name"
                android:maxLines="1"
                android:text="@={user.userName}"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_lock_white_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={user.password}"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_lock_white_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/comfirm_password"
                android:text="@={user.ensurePassword}"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/regiest"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</layout>
